--- a/pom.xml
+++ b/pom.xml
@@ -43,19 +43,26 @@
         <dependency>
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
-            <version>5.1.2</version>
+            <version>5.0.9</version>
         </dependency>
         <dependency>
         	<groupId>BDD_Cucumber_TestNg</groupId>
         	<artifactId>BDD_Cucumber_TestNg</artifactId>
         	<version>0.0.1-SNAPSHOT</version>
         </dependency>
-        <!-- JSON Parsing -->
-    <dependency>
-        <groupId>org.json</groupId>
-        <artifactId>json</artifactId>
-        <version>20230227</version>
-    </dependency>
+   <!-- JSON Path for parsing responses -->
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>json-path</artifactId>
+    <version>5.4.0</version>
+    <scope>test</scope>
+</dependency>
+    <!-- Apache Commons IO (for screenshots) -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.15.0</version>
+</dependency>
   </dependencies>
 
 </project>
